# civium

./: .gitignore  .pre-commit-config.yaml  Anchor.toml  Cargo.toml  LICENSE  README.md  docker-compose.yml  env.example  gitignore.txt  pre-commit-config.yaml  pyproject.toml
.github/workflows/: .pre-commit-config.yaml  ci.yml  fix-lint.sh  pyproject.toml  ruff.toml
circuits/: README.md  compliance_threshold.circom  package.json  range_proof.circom  tier_membership.circom
circuits/scripts/: benchmark.js  prove.js  setup.sh
circuits/test/: test_vectors.js
contracts/: ComplianceVerifier.sol  README.md
contracts/interfaces/: IComplianceVerifier.sol
crates/zk-prover/: Cargo.toml
crates/zk-prover/benches/: proving.rs
crates/zk-prover/src/: circuits.rs  error.rs  lib.rs  poseidon.rs  proof.rs  prover.rs  types.rs  verifier.rs
docs/adr/: ADR-001-database-selection.md  ADR-002-zk-proof-system.md  ADR-003-llm-selection.md  ADR-004-blockchain-platform.md  ADR-005-communication-patterns.md
docs/api/: README.md  verification.md
docs/guides/: deployment.md  development.md
infrastructure/docker/mongodb/: init.js
infrastructure/docker/neo4j/: init.cypher
infrastructure/docker/postgres/: init.sql
infrastructure/k8s/: configmap.yaml  ingress.yaml  namespace.yaml  secrets.yaml
infrastructure/k8s/services/: compliance-graph.yaml  entity-assessment.yaml  monitoring.yaml  regulatory-intelligence.yaml  verification.yaml
infrastructure/migrations/versions/: 003_entity_management_schema.sql
infrastructure/terraform/: main.tf  variables.tf
infrastructure/terraform/modules/eks/: main.tf
infrastructure/terraform/modules/vpc/: main.tf
programs/civium/: Cargo.toml
programs/civium/src/: lib.rs
scripts/: benchmark_zk.py  init_databases.py
services/: __init__.py
services/asset/: __init__.py  main.py
services/asset/ml/: __init__.py
services/asset/ml/fraud/: __init__.py  detector.py
services/asset/routes/: __init__.py  assets.py  claims.py  warranties.py
services/asset/warranty/: __init__.py  registry.py
services/compliance_graph/: __init__.py  main.py
services/compliance_graph/ingestion/: __init__.py  batch_ingester.py  rml_ingester.py
services/compliance_graph/queries/: __init__.py  compliance.py  paths.py  requirements.py
services/compliance_graph/routes/: __init__.py  compliance.py  conflicts.py  entities.py  graph.py  ingestion.py  paths.py
services/compliance_graph/schema/: __init__.py  constraints.py  nodes.py  relationships.py
services/entity_assessment/: __init__.py  main.py
services/entity_assessment/models/: __init__.py  assessment.py  entity.py  evidence.py  score.py
services/entity_assessment/routes/: __init__.py  assessments.py  entities.py  scores.py  tiers.py
services/entity_assessment/services/: __init__.py  assessment.py  score.py  tier.py
services/monitoring/: __init__.py  main.py
services/monitoring/routes/: __init__.py  alerts.py  events.py  metrics.py  streams.py
services/regulatory_intelligence/: __init__.py  change_detection.py  main.py
services/regulatory_intelligence/nlp/: __init__.py  chunking.py  embeddings.py  extraction.py  parser.py  preprocessing.py  rml.py
services/regulatory_intelligence/routes/: __init__.py  ingestion.py  pipeline.py  regulations.py  requirements.py
services/regulatory_intelligence/scrapers/: __init__.py  base.py  eurlex.py  federal_register.py
services/ticket/: __init__.py  main.py
services/ticket/ml/: __init__.py
services/ticket/ml/sla/: __init__.py  predictor.py
services/ticket/ml/triage/: __init__.py  classifier.py
services/ticket/routes/: __init__.py  sla.py  tickets.py  triage.py
services/verification/: __init__.py  main.py
services/verification/routes/: __init__.py  audit.py  credentials.py  proofs.py  verification.py
services/visitor/: __init__.py  main.py
services/visitor/ml/: __init__.py
services/visitor/ml/identity/: __init__.py  verifier.py
services/visitor/ml/threat_assessment/: __init__.py  engine.py
services/visitor/routes/: __init__.py  access.py  screening.py  visitors.py
shared/: __init__.py
shared/auth/: __init__.py  dependencies.py  jwt.py  password.py
shared/blockchain/: __init__.py  client.py  mock.py
shared/config/: __init__.py  settings.py
shared/database/: __init__.py  kafka.py  mongodb.py  neo4j.py  postgres.py  redis.py
shared/llm/: __init__.py  claude.py  ollama.py  openai.py  provider.py
shared/logging/: __init__.py  logger.py
shared/models/: __init__.py  assessment.py  common.py  compliance.py  entity.py  regulation.py
shared/zk/: __init__.py  models.py  prover.py  verifier.py
tests/: __init__.py  conftest.py
tests/services/asset/: __init__.py  test_fraud.py  test_warranty.py
tests/services/compliance_graph/: test_ingestion.py  test_schema.py
tests/services/entity_assessment/: __init__.py  test_entities.py  test_score_service.py  test_tier_service.py
tests/services/regulatory_intelligence/: test_nlp_pipeline.py  test_scrapers.py
tests/services/ticket/: __init__.py  test_sla.py  test_triage.py
tests/services/visitor/: __init__.py  test_threat_assessment.py
tests/unit/: __init__.py  test_auth.py  test_blockchain_mock.py  test_zk_prover.py
