[workspace]
members = [
    "programs/civium",
    # "crates/zk-prover",  # excluded from anchor build (poseidon-rs 0.1 not on crates.io)
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
