# Civium - Recursive Self-Improving Global Compliance World Engine
# Version: 0.1.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "civium"
version = "0.1.0"
description = "Planetary-scale compliance intelligence system with recursive self-improvement"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Civium Team", email = "team@civium.io" }
]
keywords = [
    "compliance",
    "regulatory",
    "knowledge-graph",
    "machine-learning",
    "blockchain",
    "zero-knowledge-proofs"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    
    # Data Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    
    # Database Clients
    "asyncpg>=0.30.0",  # PostgreSQL async
    "sqlalchemy[asyncio]>=2.0.36",  # ORM
    "alembic>=1.14.0",  # Migrations
    "neo4j>=5.26.0",  # Graph database
    "motor>=3.6.0",  # MongoDB async
    "redis>=5.2.0",  # Cache
    "influxdb-client>=1.47.0",  # Time-series
    
    # Message Queue
    "aiokafka>=0.12.0",  # Kafka async
    
    # LLM Providers
    "anthropic>=0.39.0",  # Claude API
    "openai>=1.55.0",  # OpenAI API (backup)
    "tiktoken>=0.8.0",  # Token counting
    
    # Authentication
    "python-jose[cryptography]>=3.3.0",  # JWT
    "passlib[bcrypt]>=1.7.4",  # Password hashing
    
    # Utilities
    "tenacity>=9.0.0",  # Retry logic
    "structlog>=24.4.0",  # Structured logging
    "python-dotenv>=1.0.1",  # Environment management
    "orjson>=3.10.0",  # Fast JSON
    
    # Monitoring
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",  # TestClient
    "faker>=33.0.0",  # Test data generation
    "hypothesis>=6.118.0",  # Property-based testing
    
    # Code Quality
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    
    # Type Stubs
    "types-redis>=4.6.0",
    "types-passlib>=1.7.7",
    "types-python-jose>=3.3.0",
    
    # Documentation
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]

ml = [
    # Machine Learning
    "torch>=2.5.0",
    "transformers>=4.46.0",
    "sentence-transformers>=3.3.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    
    # Vector Database
    "pinecone-client>=5.0.0",
    "weaviate-client>=4.9.0",
    
    # Document Processing
    "pypdf>=5.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "python-docx>=1.1.0",
    "python-dateutil>=2.9.0",
]

blockchain = [
    # Ethereum/Polygon
    "web3>=7.5.0",
    "eth-account>=0.13.0",
    
    # Zero-Knowledge Proofs (Python bindings)
    "py-ecc>=7.0.0",
    "poseidon-py>=0.1.4",
]

zk = [
    # ZK-SNARK support
    "py-ecc>=7.0.0",
    "poseidon-py>=0.1.4",
    
    # Cryptographic utilities
    "pycryptodome>=3.20.0",
]

[project.urls]
Homepage = "https://civium.io"
Documentation = "https://docs.civium.io"
Repository = "https://github.com/your-org/civium"
Issues = "https://github.com/your-org/civium/issues"

[project.scripts]
civium = "civium.cli:main"

# ============================================================================
# Tool Configuration
# ============================================================================

[tool.hatch.build.targets.wheel]
packages = ["shared", "services"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    "node_modules",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",    # Line too long (handled by formatter)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004"]
"scripts/*" = ["T201"]  # Allow print in scripts

[tool.ruff.lint.isort]
known-first-party = ["shared", "services"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "neo4j.*",
    "motor.*",
    "aiokafka.*",
    "influxdb_client.*",
    "prometheus_client.*",
    "opentelemetry.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring external services",
    "slow: Slow-running tests",
    "blockchain: Tests requiring blockchain connection",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["shared", "services"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 80
show_missing = true

