[package]
name = "civium"
version = "0.1.0"
description = "Civium compliance verification program — Solana/Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "civium"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
